--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-23  Ulrich Drepper  <drepper@cygnus.com>
+
+	* posix/execvp.c (execvp): Correct copying of file name.
+
 1999-08-23  Mark Kettenis  <kettenis@gnu.org>
 
 	* hurd/hurdsig.c (_hurd_internal_post_signal): Add missing else.
