--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 1999-08-24  Ulrich Drepper  <drepper@cygnus.com>
 
+	* conform/conformtest.pl (@headers): Add monetary.h-data,
+	mqueue.h-data, ndbm.h-data, nl_types.h-data, and poll.h-data.
+	* conform/data/monetary.h-data: New file.
+	* conform/data/mqueue.h-data: New file.
+	* conform/data/ndbm.h-data: New file.
+	* conform/data/nl_types.h.h-data: New file.
+	* conform/data/poll.h-data: New file.
+
 	* stdio-common/Makefile (test): Add tst-cookie.
 	* stdio-common/tst-cookie.c: New file.
 
