--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-08-24  Ulrich Drepper  <drepper@cygnus.com>
 
+	* libio/fileops.c (_IO_new_file_xsputn): Use _IO_OVERFLOW instead
+	of __overflow.
+
 	* conform/conformtest.pl (@headers): Add monetary.h-data,
 	mqueue.h-data, ndbm.h-data, nl_types.h-data, and poll.h-data.
 	* conform/data/monetary.h-data: New file.
